unpackaged/objects/User_Statistics__c.object
<CustomObject>
    <fields>
        <fullName>Branch_Manager__c</fullName>
        <formula>Salesperson__r.Branch_Manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <formula>Salesperson__r.Branch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Head__c</fullName>
        <formula>Salesperson__r.Business_Head__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Head</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_Head__c</fullName>
        <formula>Salesperson__r.Cluster_Head__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster Head</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_Achievement_MTD__c</fullName>
        <label>Login Achievement MTD</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Login_Commitment_for_the_month__c</fullName>
        <label>Login Commitment for the month</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Active_Leads__c</fullName>
        <label>No. of Active Leads</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Disbursement__c</fullName>
        <label>No. of Disbursement</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Logins__c</fullName>
        <label>No. of Logins</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Meetings__c</fullName>
        <label>No. of Meetings</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Sanctions__c</fullName>
        <label>No. of Sanctions</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Text(Salesperson__r.Product__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesperson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesperson</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UserStatistics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Head__c</fullName>
        <formula>Salesperson__r.State_Head__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Head</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_of_Disbursement_Achieved__c</fullName>
        <label>Value of Disbursement Achieved</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_of_Disbursement_Commitment_For_the__c</fullName>
        <label>VOD Commitment For The Month</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_of_Disbursement__c</fullName>
        <label>Value of Disbursement</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zonal_Head__c</fullName>
        <formula>Salesperson__r.Zonal_Head__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zonal Head</label>
        <type>Text</type>
    </fields>
    <label>User Statistics</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>US-{000000}</displayFormat>
        <label>User Statistics #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Statistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>